Fix breaking bug with heroes w/o sbws, add missing supply hero filter, style change to reduce contrast

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@
 }
 
 body {
+  background-color: #F5F5F5;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
 
 .content {
